# seis8s

./: Estilos.md  GlobalMusicalMaterial.hs  Instrument.hs  LICENSE  Makefile  Parser.hs  Program.hs  README.md  README2.md  Reference.md  Referencia.md  Style.hs  cumbia.cabal  default.nix  result  seis8s.cabal  seis8s_cabal
Sound/Cumbia/: Generic.hs  GlobalMaterial.hs  Harmony.hs  Instrument.hs  InstrumentState.hs  Parser.hs  Program.hs  Rhythm.hs  Style.hs
Sound/Seis8s/: Generic.hs  GlobalMaterial.hs  Harmony.hs  Instrument.hs  InstrumentState.hs  Layer.hs  LayerState.hs  Parser.hs  Program.hs  Rhythm.hs  Style.hs
executable-src/: Main.hs
library-src/Render/: WebDirt.hs
library-src/Sound/Seis8s/: Generic.hs  GlobalMaterial.hs  Harmony.hs  Layer.hs  LayerState.hs  Parser.hs  Program.hs  Rhythm.hs  Style.hs
seis8s.jsexe/: index.html  jquery.highlight-within-textarea.css  out.frefs.js  out.frefs.json  out.stats  prism.css  prism.js  style.css
seis8s.jsexe/WebDirt/: SampleBank.js
seis8s.jsexe/static/: index.html  style.css
seis8s.jsexe/static/samples/: sampleMap.json
seis8s.jsexe/static/samples/bajo/: sounds-info.txt
seis8s.jsexe/static/samples/bajo/peaks/: bajo1.wav.reapeaks
seis8s.jsexe/static/samples/cuerdas/: sounds-info.txt
seis8s.jsexe/static/samples/cuerdas/peaks/: 1cuerda.wav.reapeaks
seis8s.jsexe/static/samples/teclado/: 06VintageEP.wav.reapeaks  08DrawBarOrg1.wav.reapeaks  sounds-info.txt
seis8s.jsexe/static/samples/teclado/peaks/: teclado0.wav.reapeaks  teclado1.wav.reapeaks  teclado4.wav.reapeaks
seis8s.jsexe/static/samples/zampona/peaks/: clarinete-corto.wav.reapeaks
static/: midi.js  style.css
static/samples/: sampleMap.json
static/samples/acordeon/: sounds-info.txt
static/samples/acordeon/peaks/: acordeon0.wav.reapeaks
static/samples/altavoz/: sounds-info.txt
static/samples/contratiempos/: sounds-info.txt
static/samples/cuerdas/peaks/: 0cuerda.wav.reapeaks
static/samples/efecto/: sounds-info.txt
static/samples/guira/: sounds-info.txt
static/samples/jamblock/: sounds-info.txt
static/samples/quinto/: sounds-info.txt
static/samples/tarola/: sounds-info.txt
static/samples/teclado/: 02LApiano.wav.reapeaks  04StringsPiano.wav.reapeaks  07ElectricPiano1.wav.reapeaks  09SquareLead1.wav.reapeaks
static/samples/teclado/peaks/: teclado5.wav.reapeaks
static/samples/tumba/: sounds-info.txt
static/samples/zampona/: 257481__yano1__overall-quality-of-single-note-clarinet-c4.wav.reapeaks
