name:                cumbia
version:             0.0.0.1
synopsis:            Live coding language
description:         Please see README.md
homepage:            https://github.com/luisnavarrodelangel/cumbia/blob/master/README.md
license:             GPL-3
license-file:        LICENSE
author:              Luis N. Del Angel & David Ogborn
maintainer:          navarrol@mcmaster.ca
copyright:           2020 Luis N. Del Angel & David Ogborn
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:

Library
  hs-source-dirs:    .
  Build-Depends:
      base,
      time,
      tempi,
      hosc,
      text,
      mtl,
      containers,
      haskellish >= 0.2.0 && <0.3,
      haskell-src-exts >= 1.21.0

  GHC-Options:       -Wall -fwarn-tabs -fno-warn-unused-do-bind
  Exposed-modules:   Sound.Cumbia.Generic
                     Sound.Cumbia.GlobalMaterial
                     Sound.Cumbia.Harmony
                     Sound.Cumbia.Instrument
                     Sound.Cumbia.InstrumentState
                     Sound.Cumbia.Parser
                     Sound.Cumbia.Program
                     Sound.Cumbia.Rhythm
                     Sound.Cumbia.Style

  other-modules:
  default-language:  Haskell2010
