name:                seis8s
version:             0.0.0.1
synopsis:            Live coding language
description:         Please see README.md
homepage:            https://github.com/luisnavarrodelangel/seis8s/blob/master/README.md
license:             GPL-3
license-file:        LICENSE
author:              Luis N. Del Angel & David Ogborn
maintainer:          navarrol@mcmaster.ca
copyright:           2020 Luis N. Del Angel & David Ogborn
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:

source-repository head
  type: git
  location: https://github.com/luisnavarrodelangel/seis8s.git

Library
  hs-source-dirs:    library-src
  Build-Depends:
      base,
      time,
      mtl,
      containers,
      ghcjs-base,
      ghcjs-dom-jsffi,
      jsaddle,
      text,
      text-show,
      haskellish >= 0.2.4.2 && <0.4,
      haskell-src-exts >= 1.21.0,
      musicw >= 0.3.7 && <0.4,
      transformers,
      deepseq,
      criterion,
      hosc,
      tuple,
      aeson,
      split >= 0.2.3.3 && < 0.3,
      tempi >= 1.0.1.1 && < 1.1

  GHC-Options:       -Wall -fwarn-tabs -fno-warn-unused-do-bind
  Exposed-modules:   Sound.Seis8s.Generic
                     Sound.Seis8s.GlobalMaterial
                     Sound.Seis8s.Harmony
                     Sound.Seis8s.Layer
                     Sound.Seis8s.LayerState
                     Sound.Seis8s.Parser
                     Sound.Seis8s.Program
                     Sound.Seis8s.Rhythm
                     Sound.Seis8s.Style
  other-modules:
  default-language:  Haskell2010


executable seis8s
  hs-source-dirs:    executable-src
  main-is:           Main.hs
  build-depends:
      base,
      seis8s,
      reflex,
      reflex-dom,
      jsaddle,
      time,
      mtl,
      text,
      containers,
      ghcjs-base,
      ghcjs-dom-jsffi,
      text,
      text-show,
      haskellish >= 0.2.0,
      haskell-src-exts >= 1.21.0,
      musicw >= 0.3.7 && <0.4,
      transformers,
      deepseq,
      hosc,
      tuple,
      aeson,
      split >= 0.2.3.3,
      tempi >= 1.0.1.1 && < 1.1
  other-modules:
  default-language:  Haskell2010
